update gulp config

--- a/default.hbs
+++ b/default.hbs
@@ -18,7 +18,7 @@
 
     {{!-- Styles'n'Scripts --}}
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
-    <link rel="stylesheet" type="text/css" href="/dist/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="{{asset "css/main.css"}}" />
     <link rel="stylesheet" type="text/css" href="//cdn.bootcss.com/prism/9000.0.1/themes/prism.min.css" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
 
@@ -51,7 +51,7 @@
     {{!-- The main JavaScript file for Casper --}}
     <!-- <script type="text/javascript" src="{{asset "js/index.js"}}"></script> -->
     <script type="text/javascript" src="//cdn.bootcss.com/prism/9000.0.1/prism.min.js"></script>
-    <script type="text/javascript" src="/dist/js/main.js"></script>
+    <script type="text/javascript" src="{{asset "js/main.js"}}"></script>
 
 
 
