--- a/default.hbs
+++ b/default.hbs
@@ -17,10 +17,8 @@
     <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
 
     {{!-- Styles'n'Scripts --}}
-    <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
-    <link rel="stylesheet" type="text/css" href="{{asset "css/main.css"}}" />
+    <link rel="stylesheet" type="text/css" href="{{asset "css/main.css" minifyInProduction='true'}}" />
     <link rel="stylesheet" type="text/css" href="//cdn.bootcss.com/prism/9000.0.1/themes/prism.min.css" />
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
 
     {{!-- Ghost outputs important style and meta data with this tag --}}
     {{ghost_head}}
