--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -1,2 +1,7 @@
-@import 'partials/reset.css';
-@import 'partials/index.less';
+@import (inline) 'partials/normalize.css';
+@import (inline) 'partials/general.css';
+@import 'partials/variables';
+@import 'partials/container';
+@import 'partials/pagination';
+@import 'partials/post';
+@import 'partials/footer';
