--- a/default.hbs
+++ b/default.hbs
@@ -23,35 +23,36 @@
     {{!-- Ghost outputs important style and meta data with this tag --}}
     {{ghost_head}}
 </head>
-<body class="{{body_class}} nav-closed">
-    {{!-- The blog navigation links --}}
-    {{navigation}}
+<body class="{{body_class}}">
+  <div class="container">
+    <aside class="container-banner {{^if @blog.cover}}no-cover{{/if}}"
+    {{#if @blog.cover}}style="background-image: url({{@blog.cover}}"{{/if}}>
+      <div class="container-blog">
+        {{#if @blog.logo}}<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}" /></a>{{/if}}
+        <h1 class="blog-title">{{@blog.title}}</h1>
+        <p class="blog-description">{{@blog.description}}</p>
+        {{!-- The blog navigation links --}}
+        {{navigation}}
+      </div>
+    </aside>
+    <section class="container-content">
+      {{!-- All the main content gets inserted here, index.hbs, post.hbs, etc --}}
+      {{{body}}}
 
-    <div class="site-wrapper">
+      {{!-- The tiny footer at the very bottom --}}
+      <footer class="footer">
+        <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>
+        <section class="poweredby">Proudly published with <a href="https://ghost.org">Ghost</a></section>
+      </footer>
 
-        {{!-- All the main content gets inserted here, index.hbs, post.hbs, etc --}}
-        {{{body}}}
+    </section>
+  </div>
 
-        {{!-- The tiny footer at the very bottom --}}
-        <footer class="site-footer clearfix">
-            <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>
-            <section class="poweredby">Proudly published with <a href="https://ghost.org">Ghost</a></section>
-        </footer>
-
-    </div>
-
-    {{!-- jQuery needs to come before `{{ghost_foot}}` so that jQuery can be used in code injection --}}
-    <!-- <script type="text/javascript" src="//code.jquery.com/jquery-1.12.0.min.js"></script> -->
-    {{!-- Ghost outputs important scripts and data with this tag --}}
-    {{ghost_foot}}
-    {{!-- Fitvids makes video embeds responsive and awesome --}}
-    <!-- <script type="text/javascript" src="{{asset "js/jquery.fitvids.js"}}"></script> -->
-    {{!-- The main JavaScript file for Casper --}}
-    <!-- <script type="text/javascript" src="{{asset "js/index.js"}}"></script> -->
-    <script type="text/javascript" src="//cdn.bootcss.com/prism/9000.0.1/prism.min.js"></script>
-    <script type="text/javascript" src="{{asset "js/main.js"}}"></script>
-
-
+  {{!-- jQuery needs to come before `{{ghost_foot}}` so that jQuery can be used in code injection --}}
+  {{!-- Ghost outputs important scripts and data with this tag --}}
+  {{ghost_foot}}
+  <script type="text/javascript" src="//cdn.bootcss.com/prism/9000.0.1/prism.min.js"></script>
+  <script type="text/javascript" src="{{asset "js/main.js"}}"></script>
 
 </body>
 </html>
