--- a/assets/less/partials/container.less
+++ b/assets/less/partials/container.less
@@ -4,17 +4,18 @@
 
   &-banner {
     position: relative;
-    width: 30%;
-    max-width: 300px;
+    width: 300px;
+    text-align: center;
     box-shadow: inset -1px 0 0 rgba(0,0,0,.3);
-    background:#232323 50% 50% no-repeat;
-    background-size: cover;
+    background-color: #232323;
+    overflow: hidden;
   }
   &-blog {
+    position: relative;
     padding: 50px 10% 10%;
-    width: 100%;
     color: #fff;
     text-shadow: 0 1px 3px rgba(0,0,0,.3);
+    z-index: 1;
   }
   &-content {
     flex: 1;
