--- a/assets/less/partials/post.less
+++ b/assets/less/partials/post.less
@@ -76,12 +76,14 @@ body.page-template .post-title {
 
 .post-date {
     display: inline-block;
-    margin-left: 8px;
-    padding-left: 12px;
-    border-left: @borderColor 1px solid;
     text-transform: uppercase;
     font-size: 1.3rem;
     white-space: nowrap;
+    &:not(:first-child) {
+      margin-left: 8px;
+      padding-left: 12px;
+      border-left: @borderColor 1px solid;
+    }
 }
 
 .user-image {
