--- a/assets/less/partials/post.less
+++ b/assets/less/partials/post.less
@@ -41,7 +41,15 @@ body.page-template .post-title {
 }
 
 .read-more {
+  margin-top: 0.5em;
+  text-align: right;
+  a {
+    text-transform:uppercase;
     text-decoration: none;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 }
 
 .post-meta {
