--- a/assets/less/partials/container.less
+++ b/assets/less/partials/container.less
@@ -1,42 +1,35 @@
 .container {
   display: flex;
   height: 100%;
-
-  &-banner {
-    position: relative;
+  &-header {
     width: 300px;
-    text-align: center;
-    box-shadow: inset -1px 0 0 rgba(0,0,0,.3);
-    background-color: #232323;
-    overflow: hidden;
   }
-  &-blog {
-    position: relative;
-    padding: 50px 10% 10%;
-    color: #fff;
-    text-shadow: 0 1px 3px rgba(0,0,0,.3);
-    z-index: 1;
-  }
+
   &-content {
     flex: 1;
-    padding: 0 5%;
-    height: 100%;
-    overflow-y: auto;
+    padding: 0 2em;
   }
 }
 
-.blog {
-  &-logo {
-    img {
-      border: 3px solid #fff;
-      border-radius: 50%;
-      max-height: 100px;
-      transition: opacity .3s ease-in-out;
-      box-shadow: 0 0 3px 3px rgba(0,0,0,.3),inset 0 0 40px 2px rgba(0,0,0,.3);
-    }
-  }
-  &-title {
+.container-header {
+  &-content {
+    padding-top: 2em;
+    text-align: center;
     color: #fff;
-    font-size: 3rem;
+  }
+  .blog {
+    &-logo {
+      img {
+        border: 3px solid #fff;
+        border-radius: 50%;
+        max-height: 100px;
+        transition: opacity .3s ease-in-out;
+        box-shadow: 0 0 3px 3px rgba(0,0,0,.3),inset 0 0 40px 2px rgba(0,0,0,.3);
+      }
+    }
+    &-title {
+      color: #fff;
+      font-size: 3rem;
+    }
   }
 }
