--- a/default.hbs
+++ b/default.hbs
@@ -24,18 +24,21 @@
     {{ghost_head}}
 </head>
 <body class="{{body_class}}">
+
   <div class="container">
-    <aside class="container-banner {{^if @blog.cover}}no-cover{{/if}}"
-    {{#if @blog.cover}}style="background-image: url({{@blog.cover}}"{{/if}}>
-      <div class="container-blog">
+    {{!-- The big featured header --}}
+    <header class="container-header {{#if @blog.cover}}" style="background-image: url({{@blog.cover}}){{else}}no-cover{{/if}}">
+      <div class="container-header-content">
         {{#if @blog.logo}}<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}" /></a>{{/if}}
         <h1 class="blog-title">{{@blog.title}}</h1>
         <p class="blog-description">{{@blog.description}}</p>
         {{!-- The blog navigation links --}}
         {{navigation}}
       </div>
-    </aside>
-    <section class="container-content">
+    </header>
+
+    <div class="container-content">
+
       {{!-- All the main content gets inserted here, index.hbs, post.hbs, etc --}}
       {{{body}}}
 
@@ -44,8 +47,7 @@
         <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>
         <section class="poweredby">Proudly published with <a href="https://ghost.org">Ghost</a></section>
       </footer>
-
-    </section>
+    </div>
   </div>
 
   {{!-- jQuery needs to come before `{{ghost_foot}}` so that jQuery can be used in code injection --}}
