--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -10,7 +10,10 @@
         <h2 class="post-title"><a href="{{url}}">{{title}}</a></h2>
     </header>
     <section class="post-excerpt">
-        <p>{{excerpt words="26"}} <a class="read-more" href="{{url}}">&raquo;</a></p>
+        <p>{{excerpt words="26"}} </p>
+        <div class="read-more">
+          <a  href="{{url}}">continue &raquo;</a>
+        </div>
     </section>
     <footer class="post-meta">
         {{tags prefix=" on "}}
