--- a/assets/less/partials/pagination.less
+++ b/assets/less/partials/pagination.less
@@ -27,6 +27,7 @@
     transition: border 0.3s ease;
 }
 
+
 .older-posts {
     right: 0;
 }
@@ -36,6 +37,8 @@
     padding: 2px 0;
     min-width: 100px;
 }
+
+
 
 .newer-posts {
     left: 0;
@@ -78,4 +81,16 @@
 /* On page2+ show extra pagination controls at the top of post list */
 .paged .extra-pagination {
     display: block;
+}
+
+
+@media (max-width: @smallScreen) {
+  .older-posts,
+  .newer-posts {
+    position: static;
+  }
+
+  .page-number {
+    display: block;
+  }
 }
