--- a/assets/less/partials/post.less
+++ b/assets/less/partials/post.less
@@ -3,6 +3,7 @@
     position: relative;
     margin: 4rem auto;
     padding-bottom: 4rem;
+    max-width: @middleScreen;
     border-bottom: @borderColor 1px solid;
     word-wrap: break-word;
     &:after {
@@ -54,7 +55,6 @@ body.page-template .post-title {
 
 .post-meta {
     display: block;
-    margin: 1.75rem 0 0 0;
     font-size: 1.5rem;
     line-height: 2.2rem;
     color: @grey;
