--- a/default.hbs
+++ b/default.hbs
@@ -24,24 +24,21 @@
     {{ghost_head}}
 </head>
 <body class="{{body_class}}">
-
   <div class="container">
-    {{!-- The big featured header --}}
     <header class="container-header {{#if @blog.cover}}" style="background-image: url({{@blog.cover}}){{else}}no-cover{{/if}}">
-      <div class="container-header-content">
-        {{#if @blog.logo}}<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}" /></a>{{/if}}
-        <h1 class="blog-title">{{@blog.title}}</h1>
-        <p class="blog-description">{{@blog.description}}</p>
+      <div class="container-header-content blog">
+        <div class="blog-info">
+          {{#if @blog.logo}}<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}" /></a>{{/if}}
+          <h1 class="blog-title">{{@blog.title}}</h1>
+          <div class="blog-description">{{@blog.description}}</div>
+        </div>
         {{!-- The blog navigation links --}}
         {{navigation}}
       </div>
     </header>
 
     <div class="container-content">
-
-      {{!-- All the main content gets inserted here, index.hbs, post.hbs, etc --}}
       {{{body}}}
-
       {{!-- The tiny footer at the very bottom --}}
       <footer class="footer">
         <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>
