--- a/assets/less/partials/variables.less
+++ b/assets/less/partials/variables.less
@@ -2,3 +2,8 @@
 @greyHover: #889093;
 @borderColor: #EBF2F6;
 @borderColorHover: #98a0a4;
+
+
+// size
+@middleScreen: 1000px;
+@smallScreen: 500px;
