--- a/assets/less/partials/pagination.less
+++ b/assets/less/partials/pagination.less
@@ -6,6 +6,7 @@
 .pagination {
     position: relative;
     margin: 4rem auto;
+    max-width: @middleScreen;
     font-size: 1.3rem;
     color: @grey;
     text-align: center;
@@ -48,6 +49,7 @@
 .newer-posts:hover {
     color: #889093;
     border-color: #98a0a4;
+    text-decoration: none;
 }
 
 .extra-pagination {
