--- a/assets/less/partials/post.less
+++ b/assets/less/partials/post.less
@@ -196,3 +196,8 @@ body.page-template .post-title {
     -ms-transform: translateX(-50%); /* for IE9 */
     transform: translateX(-50%);
 }
+
+.main-header {
+  padding: 4rem 0 2rem;
+  border-bottom: 1px solid @borderColor;
+}
