--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -11,6 +11,9 @@
           <a href="{{url}}">{{title}}</a>
 
         </h2>
+        <div class="post-meta">
+          <a href="{{url}}#disqus_thread"></a>
+        </div>
     </header>
     <section class="post-excerpt">
         <p>{{excerpt words="26"}} </p>
@@ -27,3 +30,4 @@
 
 {{!-- Previous/next page links - displayed on every page --}}
 {{pagination}}
+<script id="dsq-count-scr" src="//kiyan.disqus.com/count.js" async></script>
