--- a/assets/less/partials/post.less
+++ b/assets/less/partials/post.less
@@ -22,6 +22,15 @@
     }
 }
 
+.post-header {
+  position: relative;
+  .post-meta {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
+}
+
 
 body:not(.post-template) .post-title {
     font-size: 3.6rem;
