--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -12,7 +12,7 @@
 
         </h2>
         <div class="post-meta">
-          <a href="{{url}}#disqus_thread"></a>
+          <a href="{{url}}#disqus_thread">Comments</a>
         </div>
     </header>
     <section class="post-excerpt">
@@ -30,4 +30,4 @@
 
 {{!-- Previous/next page links - displayed on every page --}}
 {{pagination}}
-<script id="dsq-count-scr" src="//kiyan.disqus.com/count.js" async></script>
+<script id="dsq-count-scr" src="https://kiyan.disqus.com/count.js" async></script>
