--- a/default.hbs
+++ b/default.hbs
@@ -18,7 +18,7 @@
 
     {{!-- Styles'n'Scripts --}}
     <link rel="stylesheet" type="text/css" href="{{asset "css/main.css" minifyInProduction='true'}}" />
-    <link rel="stylesheet" type="text/css" href="//cdn.bootcss.com/prism/9000.0.1/themes/prism.min.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/prism/9000.0.1/themes/prism.min.css" />
 
     {{!-- Ghost outputs important style and meta data with this tag --}}
     {{ghost_head}}
@@ -50,7 +50,7 @@
   {{!-- jQuery needs to come before `{{ghost_foot}}` so that jQuery can be used in code injection --}}
   {{!-- Ghost outputs important scripts and data with this tag --}}
   {{ghost_foot}}
-  <script type="text/javascript" src="//cdn.bootcss.com/prism/9000.0.1/prism.min.js"></script>
+  <script type="text/javascript" src="https://cdn.bootcss.com/prism/9000.0.1/prism.min.js"></script>
   <script type="text/javascript" src="{{asset "js/main.js"}}"></script>
 
 </body>
