--- a/assets/less/partials/post.less
+++ b/assets/less/partials/post.less
@@ -3,7 +3,7 @@
     position: relative;
     margin: 4rem auto;
     padding-bottom: 4rem;
-    max-width: @middleScreen;
+    max-width: 700px;
     border-bottom: @borderColor 1px solid;
     word-wrap: break-word;
     &:after {
@@ -172,6 +172,7 @@ body.page-template .post-title {
    with browser width % calculations and rounding */
 .post-template .content,
 .page-template .content {
+    margin: 0 -0.5em; // fix issue first letter hidden
     overflow: hidden;
 }
 
