--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -1,5 +1,5 @@
-@import (inline) 'partials/normalize.css';
-@import (inline) 'partials/general.css';
+@import 'partials/normalize';
+@import 'partials/general';
 @import 'partials/variables';
 @import 'partials/container';
 @import 'partials/pagination';
