--- a/assets/less/partials/post.less
+++ b/assets/less/partials/post.less
@@ -173,6 +173,7 @@ body.page-template .post-title {
 .post-template .content,
 .page-template .content {
     margin: 0 -0.5em; // fix issue first letter hidden
+    padding: 0 0.5em;
     overflow: hidden;
 }
 
