--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -14,7 +14,7 @@
     <section class="post-excerpt">
         <p>{{excerpt words="26"}} </p>
         <div class="read-more">
-          <a  href="{{url}}">continue &raquo;</a>
+          <a  href="{{url}}">read more &raquo;</a>
         </div>
     </section>
     <footer class="post-meta">
