remove test sign

--- a/default.hbs
+++ b/default.hbs
@@ -44,7 +44,7 @@
       <footer class="footer">
         <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>
         <section>
-          Ghost Theme with2
+          Ghost Theme with
           <a href="https://github.com/fourcels/ghostiny">ghostiny</a>
         </section>
         <section class="poweredby">Proudly published with <a href="https://ghost.org">Ghost</a></section>
