--- a/assets/less/partials/post.less
+++ b/assets/less/partials/post.less
@@ -171,6 +171,9 @@ body.page-template .post-title {
 .page-template .post {
     border-bottom: none;
     padding-bottom: 0;
+    a {
+      text-decoration: underline;
+    }
 }
 
 /* Kill that stylish little circle that was on the border, too */
