--- a/default.hbs
+++ b/default.hbs
@@ -47,6 +47,7 @@
   {{ghost_foot}}
   <script type="text/javascript" src="https://cdn.bootcss.com/turbolinks/5.0.0/turbolinks.min.js"></script>
   <script type="text/javascript" src="https://cdn.bootcss.com/prism/9000.0.1/prism.min.js"></script>
+  <script type="text/javascript" src="https://cdn.bootcss.com/prism/9000.0.1/components/prism-bash.min.js"></script>
   <script type="text/javascript" src="https://cdn.bootcss.com/nprogress/0.2.0/nprogress.min.js"></script>
   <script type="text/javascript" src="{{asset 'js/main.js'}}"></script>
 
