--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -15,7 +15,7 @@
     </div>
   </header>
 {{else}}
-  <header class="container-header-post">
+  <header id="header-post" class="container-header-post">
     <div class="blog-post">
       <div class="blog-post-info">
         {{#if @blog.logo}}<a class="blog-post-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}" /></a>{{/if}}
