--- a/assets/less/partials/general.less
+++ b/assets/less/partials/general.less
@@ -164,7 +164,7 @@ code, tt {
 pre {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    margin: 0 0 1.75em 0;
+    margin: 0 0 1.75em 0 !important;
     border: #E3EDF3 1px solid;
     width: 100%;
     padding: 10px;
