post-title capitalize

--- a/assets/less/partials/post.less
+++ b/assets/less/partials/post.less
@@ -25,6 +25,7 @@
 
 body:not(.post-template) .post-title {
     font-size: 3.6rem;
+    text-transform: capitalize;
 }
 
 body.page-template .post-title {
