--- a/assets/less/partials/footer.less
+++ b/assets/less/partials/footer.less
@@ -2,6 +2,7 @@
   padding: 20px 0;
   color: @grey;
   font-size: 1.3rem;
+  text-align: center;
   border-top: 1px solid @borderColor;
   a {
     color: @grey;
